footer dark mode corrected

--- a/src/App.css
+++ b/src/App.css
@@ -60,6 +60,13 @@ input::-webkit-inner-spin-button {
 
 
 
+button{
+  border: none;
+}
+
+
+
+
 
 
 
